# py-secretstr

./: .bumpversion.toml  pyproject.toml  taskfile.yml
.github/workflows/: release.yml  test.yaml
src/secretstr/: __init__.py
tests/: test_secretstr.py
