[project]
name = "secretstr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kalle M. Aagaard", email = "git@k-moeller.dk" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
