#:schema https://json.schemastore.org/pyproject.json

[project]
name = "secretstr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT" 
license-files = ["LICENSE"]
authors = [
    { name = "Kalle M. Aagaard", email = "git@k-moeller.dk" }
]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/KalleDK/py-secretstr"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pyright]
include = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-v --cov=secretstr --cov-report=xml --cov-report=term"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
tools = [
    "pyright>=1.1.392.post0",
    "ruff>=0.9.3",
]
test = [
    "pytest>=8.3.4",
    "pytest-coverage>=0.0",
]
